--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,11 @@ test {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//	Lombok
+	implementation 'org.projectlombok:lombok'
+	implementation 'junit:junit:4.12'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 }
