--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ test {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 
 	//	Lombok
 	implementation 'org.projectlombok:lombok'
@@ -29,4 +29,6 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
