fixed untracked files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 .gradle
+script
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -37,3 +38,4 @@ out/
 .vscode/
 
 application-oauth.properties
+application-real-db.properties
